[package]
name = "px-llvm-codegen-utils-core"
# GEN VERSION
version = "0.1.3"
# RESUME
edition = "2021"
license = "CC0-1.0"
description = "Core traits for LLVM codegen utilities"

[dependencies]
# GEN LL_DEPS
llvm-codegen-utils-version-macros = { version = "0.1.3", path = "../llvm-codegen-utils-version-macros", package = "px-llvm-codegen-utils-version-macros" }
# RESUME
nonempty = "0.10.0"
paste = "1.0.15"

# GEN LLVM
llvm-sys-190={workspace=true,optional=true}
llvm-sys-180={workspace=true,optional=true}
llvm-sys-200={workspace=true,optional=true}
# RESUME
typenum = "1.17.0"
[features]
# GEN LL_FEATURES
llvm-sys-190=["dep:llvm-sys-190"]
llvm-sys-180=["dep:llvm-sys-180"]
llvm-sys-200=["dep:llvm-sys-200"]
# RESUME
